--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
         <module>proto</module>
         <module>studentService</module>
         <module>addministrationService</module>
+        <module>teacherService</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
